--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,11 +13,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
         integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://kit.fontawesome.com/f123f0961d.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/f123f0961d.js" crossorigin="anonymous"></script>
+
 
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
     <title>OCR</title>
 </head>
+
 <body>
     <header>
         <div class="d-flex">
@@ -30,21 +35,23 @@
         <img class="d-flex col-2 " src="{% static 'images/design.png' %}" alt="">
         <div class="col-10">
             <div class="d-flex">
-                
+
                 {% csrf_token %}
-                <input class="form-control" type="text" name="search" placeholder="Search" id="search_btn">   
+
+                <input class="form-control" type="text" name="search" placeholder="Search" id="search_btn">
                 <i type="submit" class="fa-solid fa-magnifying-glass" id="but_search"></i>
                 <!-- <div class="loader">
                     <center>
                         <img class="loading-image" src="../static/images/loader.gif" alt="loading..">
                     </center>
                 </div> -->
+
             </div>
         </div>
     </div>
-        
-     
-     <!-- <span>Total images found</span>
+
+
+    <!-- <span>Total images found</span>
     <div class="row">
         {% for image in images %}
         <div class="col-sm-2">
@@ -60,56 +67,92 @@
     </div>
       -->
 
-    
 
 
 
 
-        <!-- <img src="/media/all_image/{{ image }}" alt="hghgh" height="250px" width="250px"> -->
-      
+
+    <!-- <img src="/media/all_image/{{ image }}" alt="hghgh" height="250px" width="250px"> -->
 
 
-      
-    
 
 
-    <div id = 'loader'>
+
+
+
+
+
+    <!-- <div id='loader'>
         <div class="d-flex justify-content-center">
-        <img id="" class="mx-5 srch_gif" src="{% static 'images/loader.gif' %}" alt="" height="250px"
-            style="position: absolute;">
+            <img id="" class="mx-5 srch_gif" src="{% static 'images/loader.gif' %}" alt="" height="250px"
+                style="position: absolute;">
         </div>
-    </div> 
+    </div> -->
 
     <div id="images">
 
     </div>
-    
-     <div  id="baar" class="d-flex justify-content-center">
-         <img class="mx-5 srch_gif" src="{% static 'images/search_gif.gif' %}" alt="" height="250px" style="position: absolute;">
-         <div  class="card_jpg">
-             </div>
+
+    <div id="baar" class="d-flex justify-content-center">
+        <img class="mx-5 srch_gif" src="{% static 'images/search_gif.gif' %}" alt="" height="250px"
+            style="position: absolute;">
+        <div class="">
+            <div class="row card_jpg">
+
+            </div>
+        </div>
     </div>
-    <div class="d-flex  justify-content-end"> 
-        <img class="col-2 img_con justify-content-end mt-5" style="margin-top:6rem!important" src="{% static 'images/design.png' %}" alt="">
+    <div id="image-viewer">
+
+        <span class="close">&times;</span>
+        <p></p>
+
+        <div class="d-flex">
+
+            <img class="modal-content" id="full-image">
+            <!-- <img class="modal_content" id="full-image_2"> -->
+            <textarea name="" id="" col="40" rows="15" class="modal_content" id="full-image_2"></textarea>
+            <!-- <iframe src="{% static 'css/bas.txt' %}" class="modal_content"  id="full-image_2"  frameborder="0"></iframe> -->
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+
+        </div>
+
+
+
+
+
+    </div>
+    <div class="d-flex  justify-content-end">
+        <img class="col-2 img_con justify-content-end mt-5" style="margin-top:6rem!important"
+            src="{% static 'images/design.png' %}" alt="">
     </div>
 
     <div class="response">
     </div>
-    
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="{% static 'js/style.js' %}"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="{% static 'js/style.js' %}"></script>
 
 
 
-<!-- Option 1: Bootstrap Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 
 
 
-<!-- Option 2: Separate Popper and Bootstrap JS -->
-<!--
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
